--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <h2>Activity Links</h2>
         <a href="https://12on-26.github.io/Guessing-Game/">Guess the Secret Word Game</a>
         <a href="browserDashboard.html">Browser Environment Dashboard</a>
+        <a href="dom_traversal.html">Interactive DOM Traversal and Manipulation</a>
     </section>
 </body>
 </html>
