--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <a href="https://12on-26.github.io/Guessing-Game/">Guess the Secret Word Game</a>
         <a href="browserDashboard.html">Browser Environment Dashboard</a>
         <a href="dom_traversal.html">Interactive DOM Traversal and Manipulation</a>
+        <a href="https://12on-26.github.io/Interactive-Canvas-Shape-Editor/">Interactive Canvas Shape Editor</a>
     </section>
 </body>
 </html>
